Updated author list, various edits in descriptions

--- a/00main.tex
+++ b/00main.tex
@@ -59,10 +59,15 @@
 
 \title{\jsns nanopulser optical calibration system}
 
-\author[1,*]{Simon J.M. Peeters}
-\author[1]{James Waterfield}
-\author[1]{Richard White}
-\affil[1]{University of Sussex, Falmer, BN1 9QH, UK}
+\author[1]{H. Furuta}
+\author[1]{Y. Hino}
+\author[2]{Tsunayuki Matsubara}
+\author[3,*]{S. J.M.~Peeters}
+\author[3]{J.~Waterfield}
+\author[3]{Richard~White}
+\affil[1]{Tohoku University, Japan}
+\affil[2]{Tokyo Metropolitan University, Japan}
+\affil[3]{University of Sussex, University of Sussex}
 \affil[*]{Corresponding author: s.j.m.peeters@sussex.ac.uk}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -84,7 +89,6 @@ This note describes the the \jsns nanopulser optical calibration system. The doc
 
 \flushbottom
 \maketitle
-\fix[inline]{SJMP, author list: add Japanese contributors: Hino-san, Furuta-san, ...}
 
 {\raggedright\sffamily\bfseries\fontsize{12}{14}\selectfont Version: \date{\today}}
 
