--- a/nanopulser.bib
+++ b/nanopulser.bib
@@ -5,3 +5,18 @@ title = {{Technical Design Report (TDR): Searching for a Sterile Neutrino at J-P
 url = {http://arxiv.org/abs/1705.08629},
 year = {2017}
 }
+
+@misc{GITHUB_DOC,
+  author = {Simon J.M. Peeters},
+  title = {{\jsns nanopulser optical calibration system}},
+  howpublished = "\url{https://github.com/sjmpeeters/JSNS2_nanopulser_manual.git}",
+  year = {2019}
+}
+
+
+@misc{GITHUB_PIC,
+  author = {Richard White},
+  title = {{\jsns nanopulser PIC programming software and code}},
+  howpublished = "\url{https://github.com/sjmpeeters/nanopulser_pic_programming.git}",
+  year = {2019}
+}
