--- a/nanopulser.bib
+++ b/nanopulser.bib
@@ -13,10 +13,16 @@ year = {2017}
   year = {2019}
 }
 
-
 @misc{GITHUB_PIC,
   author = {Richard White},
   title = {{\jsns nanopulser PIC programming software and code}},
   howpublished = "\url{https://github.com/sjmpeeters/nanopulser_pic_programming.git}",
+  year = {2019}
+}
+
+@misc{GITHUB_SOFT,
+  author = {James Waterfield, Mark Stringer},
+  title = {{\jsns nanopulser PIC programming software and code}},
+  howpublished = "\url{https://github.com/sjmpeeters/JSNS2_nanopulser_control_software.git}",
   year = {2019}
 }
