Added information pulser performance, added appendix with drawings and updates to several parts of the manual.

--- a/00main.tex
+++ b/00main.tex
@@ -18,6 +18,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}   
+\usepackage{pdfpages}
 \usepackage{amssymb} % more options for symbols (can also add amsmath/amstext)
 \usepackage{draftwatermark} % set watermark
 \usepackage{etoolbox} % toggle options (e.g. names of people on/off)
@@ -60,6 +61,7 @@
 \title{\jsns nanopulser optical calibration system}
 
 \author[1]{H. Furuta}
+\author[3]{A. Gibson}
 \author[1]{Y. Hino}
 \author[2]{Tsunayuki Matsubara}
 \author[3,*]{S. J.M.~Peeters}
@@ -123,7 +125,18 @@ This note describes the the \jsns nanopulser optical calibration system. The doc
 \section*{System commissioning}
 \input{commissioning}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Bibliography
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \bibliography{nanopulser}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Appendices
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newpage
+\input{appendix}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % To do list
