--- a/nanopulser.bib
+++ b/nanopulser.bib
@@ -21,8 +21,15 @@ year = {2017}
 }
 
 @misc{GITHUB_SOFT,
-  author = {James Waterfield, Mark Stringer},
+  author = {James Waterfield},
   title = {{\jsns nanopulser PIC programming software and code}},
   howpublished = "\url{https://github.com/sjmpeeters/JSNS2_nanopulser_control_software.git}",
   year = {2019}
+}
+
+@misc{GITHUB_TEST,
+  author = {Mark Stringer},
+  title = {{Operation and performance of the \jsns driver system}},
+  howpublished = "\url{https://github.com/Sussex-Invisibles/JSNS2PulserControl}",
+  year = {2018}
 }
