--- a/commissioning.tex
+++ b/commissioning.tex
@@ -1,8 +1,8 @@
 % !TeX root = 00main.tex
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % System commissioning
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection*{Commissioning at the University of Sussex}
 
@@ -15,7 +15,7 @@ The system was then shipped to Japan and tested again for functionality at the \
 \begin{table}[h!]
   \begin{center}
     \caption{Results of the commissioning at the University of Sussex. The measurements are only relative: settings indicated are for which the trigger pulser and the light pulse were observed at the same time, using the specific test set-up at Sussex; the amplitude was as measured with a Hamatsu mini-PMT with mylar filter using the maximum light output setting.}
-    \label{table:sussex_commissioining}
+    \label{table:sussex_commissioning}
     \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|} 
 	\hline
 	 & \multicolumn{4}{c|}{LED1} & \multicolumn{4}{c|}{LED2} & \multicolumn{4}{c|}{LED3} \\
@@ -44,6 +44,6 @@ The system was then shipped to Japan and tested again for functionality at the \
 The following tasks still remain for commissioning:
 \begin{itemize}
 \item Estimate the delay needed for the system once installed.
-\item Confirm the settings of Table~\ref{table:sussex_commissioining} and find the values for the estimated delay between optical pulse and the trigger. Try to get the all channels as close as possible. Note the (estimated) magnitude of (any) trigger jitter, if observed.
+\item Confirm the settings of Table~\ref{table:sussex_commissioning} and find the values for the estimated delay between optical pulse and the trigger. Try to get the all channels as close as possible. Note the (estimated) magnitude of (any) trigger jitter, if observed.
 \item Find the optical range for each channel - the minimal pulse is around pulse height setting 10,000. Find the actual minimal value and note the pulse integral observed in the PMT used, as well as the pulse integral when using the maximum value pulse height setting.
 \end{itemize}
